      It is now possible to change the settings in the acquisition loop.
    . An exceptions is throwned when moving-edges are not initialized
      (vpMeTracker, vpMeLine, vpMeEllipse)
    . In model-based trackers, improve face visibility test using Ogre ray
      tracing when faces are concave or not oriented counter clockwise.
    . ViSP can now be used with pkg-config
  - Examples
    . Introduction of tutorials
  - Bug fixed
    . [15404] Segfault in vpMbTracker derived classes around Coin SoDB::init()
      and SoDB::finish() usage
    . [15410] Robot wireframe simulator hangs
    . [15422] Build issues with ffmpeg 1.0.1 third party
    . [15475] Segfault in cv::Mat(BGR) to vpImage(grey) conversion
    . [15522] Visibility tests issues in Model-Based Tracker using Ogre3D
    . [15566] Bad mask orientation when using model-based tracker with
      cylinders
    . [15587] visp-config conflicts with multiarch support on Debian
    . [15623] Possible ViSP-2.7.0 bugs detected by cppcheck
    . [15644] crash with vpRobotWireFrameSimulator::initScene()
    . [15679] vpDot and vpDot2 copy operator are incomplete
    . [15680] Bad pixel to meter conversion in vpFeatureLuminance
    . [15697] False positive exception in vpDisplay when vpDisplay::close()
      is used
----------------------------------------------
ViSP 2.7.0 (released February 11th, 2013)
  - New features
    - New vpViper650 and vpRobotViper650 classes to interface Inria's new
      Adept Viper s650 robot.
    - New robot simulators; vpSimulatorCamera, vpSimulatorPioneer,
      vpSimulatorPioneerPan
    - New model-based tracker using KLT points: vpMbKltTracker.
    - New hybrid model-based tracker using moving edges and KLT points:
      vpMbEdgeKltTracker
  - Improvements
    - Add visp-config.1 man page.
    - To respect Debian guidelines, remove duplicate ABI version.
      Library name was set to libvisp.a or libvisp.so.2.7.0 rather than
      libvisp-2.a or libvisp-2.so.2.7.0